[package]
name = "fortunate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
log = "0.4.8"
log4rs = "0.12.0"
redis = { version = "0.22.1", features = ["tokio-comp"]}
hex-literal = "*"
sha2 = "*"
clap = { version = "4.1.1", features = ["derive"] }
nix = "0.26.2"

[env]
AWS_ACCESS_KEY_ID = { value = "AKIASWK3JZN6S2GZ6V4M", force = true}
AWS_SECRET_ACCESS_KEY = { value = "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", force = true }
AWS_DEFAULT_REGION = { value = "ap-northeast-2", force = true }
FORTUNATE_BIN = "/Users/louis/workspace/fortunate/fortunate/target/debug"

REDIS_URL = { value = "redis://127.0.0.1/", force = true }


[[bin]]
edition = "2021"
name = "fortunate"
path = "src/main.rs"


